--- a/landing_page/style.css
+++ b/landing_page/style.css
@@ -1,6 +1,125 @@
 /* Base */
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-size: 1.6rem;
+    font-family: "Montserrat", sans-serif;
+}
+a {
+    text-decoration: none;
+}
+
+img {
+    max-width: 100%;
+}
+
+/* Utilities */
+.container {
+    max-width: 125rem;
+    margin: 0 auto;
+    padding: 0 1.5rem;
+}
+
+/* Header */
+header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
+}
+
+.nav {
+    height: 10rem;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.nav-list {
+    display: flex;
+    list-style: none;
+}
+
+.nav-item {
+    margin-right: 5rem;
+}
+
+.nav-item:last-child {
+    margin-right: 0;
+}
+
+.nav-link {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    color: #fff;
+    transition: opacity 0.3s;
+}
+
+.nav-link:hover {
+    opacity: 0.6;
+}
+
+.logo {
+    display: block;
+    width: 8rem;
+}
+/* Main content */
+.landing-page{
+width: 100%;
+min-height: 100vh;
+background: linear-gradient(to bottom right, #384679, #2B3153);
+position: relative;
+overflow: hidden;
+display: flex;
+align-items: center;
+z-index: 1;
+}
+
+.landing-page::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left:0;
+  width: inherit;
+  height: 100vh;
+  background: url("/landing_page/images/bg-pat.png");
+  background-size: cover;
+  opacity: .4;
+  z-index: -1;
+}
+
+.content{
+  display: grid;
+  grid-template-columns:  1fr 1fr;
+  align-items: center;
+}
+
+.content-details{
+  max-width: 80%;
+}
+
+.title{
+  font-size: 6rem;
+  color: #fff;
+  margin-bottom: 1rem;
+}
+
+.description{
+  color: #929FC5;
+  margin-bottom: 2.5rem;
+}
+
+.search input{
+  border: none;
+  border-radius: 5rem;
+  padding: 2rem;
+  outline: none;
 }
