--- a/yt_tutorial/style.css
+++ b/yt_tutorial/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 section {
-    min-height: 96vh;
+    min-height: 90vh;
     padding: 0 9%;
     padding-top: 7.5rem;
     padding-bottom: 2rem;
@@ -295,7 +295,7 @@ cursor: pointer;
 .review .box-container .box{
     background: #fff;
     margin:1rem;
-    padding: 1rem;
+    padding: 3rem;
     text-align: center;
     position: relative;
     border: .1rem solid rgba(0, 0, 0, .2);
@@ -395,7 +395,149 @@ list-style: none;
     color:tomato;
 }
 
+.contact{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-bottom: 4rem;
+}
 
+.contact .image{
+    flex: 1 1 40rem;
+}
+
+.contact .image img{
+    width: 100%;
+    padding: 2rem;
+}
+
+.contact form{
+    flex: 1 1 40rem;
+    padding: 2rem 3rem;
+    border: .1rem solid rgba(0, 0, 0, .2);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.1);
+    border-radius: .5rem;
+    background: #fff;
+}
+
+.contact form .heading{
+    text-align: left;
+    padding: 0;
+    padding-bottom: 2rem;
+}
+
+.contact form .inputBox{
+    position: relative;
+}
+
+.contact form .inputBox input,
+.contact form .inputBox textarea{
+width: 100%;
+background:none;
+color:#666;
+margin: 1.5rem 0;
+padding: .5rem 0;
+font-size: 1.7rem;
+border-bottom: .1rem solid rgba(0, 0, 0, 0.1);
+text-transform: none;
+}
+
+.contact form .inputBox textarea{
+  resize: none;
+  height: 13rem;  
+}
+
+.contact form .inputBox label{
+    position: absolute;
+    top:1.7rem;
+    left:0;
+    font-size: 1.7rem;
+    color:#666;
+    transition: .2s linear;
+}
+
+.contact form .inputBox input:focus ~ label,
+.contact form .inputBox input:valid ~ label,
+.contact form .inputBox textarea:focus ~ label,
+.contact form .inputBox textarea:valid ~ label{
+top: -.5rem;
+font-size: 1.5rem ;
+color:var(--pink);
+}
+
+.footer{
+    padding-top: 3rem;
+    background: url(/yt_tutorial/images/footer-bg.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.footer .box-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-top: 3rem;
+}
+
+.footer .box-container .box{
+     flex: 1 1 25rem;
+     margin:2rem;
+}
+
+.footer .box-container .box h3{
+    font-size: 2.5rem;
+    padding: 1rem 0;
+    color:#fff;
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+}
+
+.footer .box-container .box p{
+    font-size: 1.5rem;
+    padding: .5rem 0;
+    color:#eee;
+}
+
+
+.footer .box-container .box a{
+    display: block;
+    font-size: 1.5rem;
+    padding: .5rem 0;
+    color:#eee;
+}
+
+.footer .box-container .box a:hover{
+    text-decoration: underline;
+}
+
+.footer .box-container .box .info{
+    display: flex;
+    align-items: center;
+}
+
+.footer .box-container .box .info i{
+    margin: .5rem 0;
+    margin-right: 1rem;
+    border-radius: 50%;
+    background: #fff;
+    color:var(--pink);
+    font-size: 1.5rem;
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4.5rem;
+    text-align: center;
+}
+
+.footer .credit{
+    font-size: 2rem;
+    font-weight: normal;
+    letter-spacing: .1rem;
+    color:#fff;
+    border-top: .1rem solid #fff5;
+    padding: 2.5rem 1rem;
+    text-align: center;
+}
 
 
 
