--- a/yt_tutorial_2/style.css
+++ b/yt_tutorial_2/style.css
@@ -18,6 +18,7 @@ a {
     height: 100vh;
     background-image: url(/yt_tutorial_2/images/poduct\ bg.png);
     background-size: top left;
+    position: relative;
 }
 
 .logo img {
@@ -86,32 +87,209 @@ nav ul li a:hover {
     width: 500px;
     margin: 20px;
 }
-.home-text h1{
-  font-size: 3.5rem;
-  line-height: 55px;
-  color: #22252e;
-  letter-spacing: 1px;
-  font-weight: 700;
-  margin: 0px;
+.home-text h1 {
+    font-size: 3.5rem;
+    line-height: 55px;
+    color: #22252e;
+    letter-spacing: 1px;
+    font-weight: 700;
+    margin: 0px;
 }
 
-.home-text p{
-  font-size: 1rem;
-  color: #777474;
+.home-text p {
+    font-size: 1rem;
+    color: #777474;
 }
-.main-login{
-  width: 120px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #5a76fd;
-  color: #fff;
-  box-shadow:5px 10px 30px rgba(90, 118, 253, 0.5);
-  text-transform: uppercase;
+.main-login {
+    width: 120px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #5a76fd;
+    color: #fff;
+    box-shadow: 5px 10px 30px rgba(90, 118, 253, 0.5);
+    text-transform: uppercase;
 }
 
-.main-login:hover{
-  background-color: #5a62fd;
-  transition: all ease .2s;
+.main-login:hover {
+    background-color: #5a62fd;
+    transition: all ease 0.2s;
+}
+
+.timing {
+    position: absolute;
+    left: 20%;
+    bottom: 10px;
+    transform: translateX(-20%);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.office-time,
+.office-number {
+    margin: 0 20px;
+}
+
+.office-time h3,
+.office-number h3 {
+    font-weight: 700;
+    color: #22252e;
+    font-size: 1.6rem;
+    margin: 0px;
+}
+
+.office-number p,
+.office-time p {
+    color: #777474;
+    font-size: 1.1rem;
+}
+
+.office-time font,
+.office-number font {
+    color: #7b92fd;
+    font-weight: 700;
+}
+
+.arrow {
+    align-self: end;
+    width: 50%;
+    border-right: 1px solid #5a76fd;
+    height: 20%;
+    margin-bottom: 4em;
+    position: absolute;
+    bottom: 5px;
+    right: 70px;
+    animation: arrow-animation ease 2.5s infinite;
+}
+
+.arrow::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 11px 11px 0px 11px;
+    border-color: #5a76fd transparent transparent transparent;
+    right: -0.7em;
+    bottom: -2px;
+}
+
+.scroll {
+    position: absolute;
+    bottom: 20px;
+    right: 53px;
+    font-weight: 600;
+}
+
+@keyframes arrow-animation {
+    0% {
+        bottom: 70px;
+        opacity: 0.2;
+    }
+
+    100% {
+        bottom: 5px;
+        opacity: 1;
+    }
+}
+
+.services {
+    background-image: url(/yt_tutorial_2/images/poduct\ bg.png);
+    background-size: 1000px;
+    background-position: center;
+}
+
+.services-heading {
+    margin-top: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+}
+
+.services-heading h2 {
+    line-height: 55px;
+    font-size: 2.2rem;
+    color: #22252e;
+    letter-spacing: 1px;
+    font-weight: 700;
+    margin: 0px;
+}
+
+.services-heading p {
+    font-size: 1rem;
+    color: #777477;
+    width: 50%;
+}
+
+.box-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 20px 30px;
+}
+
+.box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    height: 400px;
+    text-align: center;
+    box-shadow: 2px 2px 20px rgba(90, 118, 253, 0.13);
+    border-radius: 10px;
+    background: #fff;
+    margin: 20px;
+    flex-grow: 1;
+}
+
+.box img {
+    height: 150px;
+    margin: 10px;
+}
+
+.box font {
+    font-size: 1.5rem;
+    color: #22252e;
+    letter-spacing: 1px;
+    font-weight: 700;
+}
+
+.box p {
+    font-size: 1rem;
+    color: #777474;
+    display: block;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 500px;
+}
+
+.box a {
+    width: 150px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #5a76fd;
+    text-transform: uppercase;
+    margin: auto;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 0.9rem;
+    color: #5a76fd;
+}
+
+.box a:hover {
+    background: #5a76fd;
+    color: #fff;
+    box-shadow: 5px 10px 30px rgba(90, 118, 253, 0.5);
+    transition: all ease .5s;
 }
