styling mobile view

--- a/yt_tutorial_2/style.css
+++ b/yt_tutorial_2/style.css
@@ -160,7 +160,7 @@ nav ul li a:hover {
     width: 50%;
     border-right: 1px solid #5a76fd;
     height: 20%;
-    margin-bottom: 4em;
+    margin-bottom: 4rem;
     position: absolute;
     bottom: 5px;
     right: 70px;
@@ -288,6 +288,7 @@ nav ul li a:hover {
     font-weight: 600;
     font-size: 0.9rem;
     color: #5a76fd;
+    margin:0;
 }
 
 .box a:hover {
@@ -311,7 +312,7 @@ footer p {
     color: #5e5e5e;
 }
 
-nav .menu-btn{
+nav .menu-btn {
     display: none;
 }
 
@@ -320,8 +321,30 @@ nav .menu-btn{
         justify-content: space-between;
         height: 65px;
     }
+    .logo img {
+        margin-left: 30px;
+    }
     .menu {
         display: none;
+        position: absolute;
+        top: 65px;
+        left: 0;
+        background: #fff;
+        border-bottom: 4px solid #5a76fd;
+        width: 100%;
+    }
+
+    .menu li {
+        width: 100%;
+    }
+    nav .menu li a {
+        width: 100%;
+        height: 40px;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+        padding: 25px;
+        border: 1px solid rgba(38, 38, 38, 0.03);
     }
 
     nav .menu-icon {
@@ -368,7 +391,138 @@ nav .menu-btn{
         transform: rotate(45deg);
         top: 0;
     }
-    nav .menu-btn{
+    nav .menu-btn {
         display: none;
+    }
+
+    nav .menu-btn:checked ~ .menu {
+        display: block;
+    }
+
+    .home-img {
+        display: none;
+    }
+    .home-text {
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        height: 45vh;
+        background: rgba(33, 33, 33, 0.35);
+        margin: 0;
+    }
+
+    .home-content {
+        width: 100%;
+        margin: 0;
+        position: static;
+        transform: translate(0px, 70px);
+        background-image: url("/yt_tutorial_2/images/bg2.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: top right;
+        box-shadow: 2px 2px 30px rgba(90, 118, 253, 0.15);
+    }
+
+    .home-text h1 {
+        color: #fff;
+        padding: 0 20px;
+        font-size: 2.5rem;
+        border: 1px solid #fff;
+    }
+
+    .home-text p {
+        color: rgba(255, 255, 255, 0.8);
+        margin: 10px 0 20px 0;
+        width: 50%;
+    }
+
+    .arrow {
+        height: 70px;
+    }
+
+    .main {
+        background-size: 500px;
+    }
+
+    .timing,
+    .arrow,
+    .scroll {
+        bottom: 40px;
+    }
+}
+@media (max-width: 720px) {
+    .home-text p {
+        width: 70%;
+        text-align: center;
+    }
+    .office-number,
+    .office-time {
+        flex-grow: 1;
+        margin: 10px;
+    }
+
+    .office-number h3,
+    .office-time h3 {
+        font-size: 1rem;
+    }
+    .office-number p,
+    .office-time p {
+        font-size: 0.8rem;
+    }
+
+    .arrow,
+    .scroll {
+        display: none;
+    }
+
+    .home-content h1 {
+        font-size: 1.9rem;
+        padding: 10px;
+        line-height: 30px;
+    }
+
+    .timing {
+        width: 100%;
+        flex-wrap: wrap;
+        margin: 0px;
+        padding: 0 20px;
+    }
+
+    .services-heading{
+        margin:20px;
+
+    }
+
+    .services-heading h2{
+        font-size: 1.7rem;
+        line-height: 40px;
+    }
+
+    .services-heading p{
+        width: 100%;
+    }
+
+    .box{
+        width: 100%;
+        margin: 20px 0px;
+        padding: 0 20px;
+        flex-grow:1;
+    }
+
+    .box img{
+        height: 100px;
+        width: 100%;
+        object-fit: contain;
+    }
+
+    footer p,a{
+        font-size: .9rem;
+        text-align: center;
+    }
+
+    footer{
+        padding: 0 20px;
     }
 }
